# vigir_footstep_planning_basics

./: README.md
vigir_footstep_planning_basic_plugins/: CMakeLists.txt  basic_plugins.xml  package.xml
vigir_footstep_planning_basic_plugins/config/: basic_plugins.yaml
vigir_footstep_planning_basic_plugins/include/vigir_footstep_planning_basic_plugins/: collision_check_grid_map_plugin.h  collision_check_plugin.h  post_process_plugin.h  reachability_plugin.h  robot_model_plugin.h  step_cost_estimator_plugin.h  step_plan_msg_plugin.h  terrain_model_plugin.h
vigir_footstep_planning_basic_plugins/src/: collision_check_grid_map_plugin.cpp  collision_check_plugin.cpp  heuristic_plugin.cpp  post_process_plugin.cpp  reachability_plugin.cpp  robot_model_plugin.cpp  step_cost_estimator_plugin.cpp  step_plan_msg_plugin.cpp  terrain_model_plugin.cpp
vigir_footstep_planning_lib/: CMakeLists.txt  basic_plugins.xml  package.xml  setup.py
vigir_footstep_planning_lib/config/: basic_plugins.yaml
vigir_footstep_planning_lib/include/vigir_footstep_planning_lib/: helper.h  math.h  parameter_manager.h  singleton.h
vigir_footstep_planning_lib/include/vigir_footstep_planning_lib/modeling/: footstep.h  planning_state.h  state.h
vigir_footstep_planning_lib/include/vigir_footstep_planning_lib/plugins/: collision_check_grid_map_plugin.h  collision_check_plugin.h  heuristic_plugin.h  plugin.h  plugin_manager.h  post_process_plugin.h  reachability_plugin.h  robot_model_plugin.h  step_cost_estimator_plugin.h  step_plan_msg_plugin.h  terrain_model_plugin.h
vigir_footstep_planning_lib/include/vigir_footstep_planning_lib/threading/: job.h  queue.h  threading_manager.h  worker.h
vigir_footstep_planning_lib/include/vigir_footstep_planning_lib/visualization/: footstep_planning_vis.h  footstep_planning_vis_node.h
vigir_footstep_planning_lib/resource/: execute_step_plan.ui
vigir_footstep_planning_lib/src/: helper.cpp  math.cpp  parameter_manager.cpp
vigir_footstep_planning_lib/src/modeling/: footstep.cpp  planning_state.cpp  state.cpp
vigir_footstep_planning_lib/src/plugins/: collision_check_grid_map_plugin.cpp  collision_check_plugin.cpp  heuristic_plugin.cpp  plugin.cpp  plugin_manager.cpp  post_process_plugin.cpp  reachability_plugin.cpp  robot_model_plugin.cpp  step_cost_estimator_plugin.cpp  step_plan_msg_plugin.cpp  terrain_model_plugin.cpp
vigir_footstep_planning_lib/src/vigir_footstep_planning_lib/: error_status_widget.py  execute_step_plan_widget.py  logging.py  ocs_plugin.py  parameter_set_widget.py  parameter_tree_widget.py  qt_helper.py  topic_widget.py
vigir_footstep_planning_lib/src/visualization/: footstep_planning_vis.cpp  footstep_planning_vis_node.cpp
vigir_footstep_planning_plugins/: CMakeLists.txt  package.xml  plugins.xml
vigir_footstep_planning_plugins/config/: plugin_descriptions.yaml
vigir_footstep_planning_plugins/include/vigir_footstep_planning_plugins/: collision_check_grid_map_plugin.h  collision_check_plugin.h  heuristic_plugin.h  post_process_plugin.h  reachability_plugin.h  robot_model_plugin.h  step_cost_estimator_plugin.h  step_plan_msg_plugin.h  terrain_model_plugin.h
vigir_footstep_planning_plugins/include/vigir_footstep_planning_plugins/plugin_aggregators/: extended_plugin_aggregator.h  heuristic.h  post_processor.h  robot_model.h  state_generator.h  step_cost_estimator.h  world_model.h
vigir_footstep_planning_plugins/include/vigir_footstep_planning_plugins/plugins/: collision_check_grid_map_plugin.h  collision_check_plugin.h  heuristic_plugin.h  post_process_plugin.h  reachability_plugin.h  robot_model_plugin.h  state_generator_plugin.h  step_cost_estimator_plugin.h  step_plan_msg_plugin.h  terrain_model_plugin.h
vigir_footstep_planning_plugins/src/: collision_check_grid_map_plugin.cpp  collision_check_plugin.cpp  heuristic_plugin.cpp  post_process_plugin.cpp  reachability_plugin.cpp  robot_model_plugin.cpp  step_cost_estimator_plugin.cpp  step_plan_msg_plugin.cpp  terrain_model_plugin.cpp
vigir_footstep_planning_plugins/src/plugin_aggregators/: heuristic.cpp  post_processor.cpp  robot_model.cpp  state_generator.cpp  step_cost_estimator.cpp  world_model.cpp
vigir_footstep_planning_plugins/src/plugins/: collision_check_grid_map_plugin.cpp  collision_check_plugin.cpp  heuristic_plugin.cpp  post_process_plugin.cpp  reachability_plugin.cpp  robot_model_plugin.cpp  state_generator_plugin.cpp  step_cost_estimator_plugin.cpp  step_plan_msg_plugin.cpp  terrain_model_plugin.cpp
vigir_footstep_planning_rviz_plugin/: CMakeLists.txt  package.xml
vigir_footstep_planning_widgets/: CMakeLists.txt  package.xml  plugin.xml  setup.py
vigir_footstep_planning_widgets/launch/: execute_step_plan_rqt.launch  parameter_editor_rqt.launch  pattern_generator_rqt.launch  step_interface_rqt.launch
vigir_footstep_planning_widgets/scripts/: execute_step_plan_rqt  parameter_editor_qt  parameter_editor_rqt  pattern_generator_rqt  step_interface_qt  step_interface_rqt
vigir_footstep_planning_widgets/src/vigir_footstep_planning_widgets/: execute_step_plan_widget.py  parameter_editor_widget.py  pattern_generator_widget.py  step_interface_widget.py
